# covenants-gadgets

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
src/: bitcoin_script.rs  covenant_program.rs  covenant_program_nocheck.rs  cpp_integer.rs  lib.rs  parallel.rs  schnorr_trick.rs  script_pub_key.rs  sequence.rs  test.rs  tx_out.rs  variable_integer.rs
src/covenants/: mod.rs  parallel.rs  sequence.rs
src/examples/: SIGNET.md  counter.rs  mod.rs
src/internal_structures/: cpp_int_32.rs  cpp_uint_64.rs  mod.rs  variable_length_integer.rs
src/structures/: amount.rs  annex.rs  codesep_pos.rs  epoch.rs  hashtype.rs  key_version.rs  locktime.rs  mod.rs  script_pub_key.rs  script_sig.rs  sequence.rs  spend_type.rs  stack_hash.rs  tagged_hash.rs  tap_leaf_hash.rs  txid.rs  version.rs
src/utils/: mod.rs  pseudo.rs  stack_hash.rs
src/wizards/: ext.rs  mod.rs  outpoint.rs  tag_csv_preimage.rs  tap_csv_preimage.rs  tx.rs  tx_in.rs  tx_out.rs
