[package]
name = "covenants-gadgets"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.0", features = ["rand"] }
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script" }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"

[dev-dependencies]
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec", features = ["debug"] }
hex = "0.4.3"

[profile.dev]
opt-level = 3

[profile.release]
lto = true